# DreamSimulator

./: .editorconfig  .eslintrc.json  .gitignore  Cargo.toml  LICENSE.md  commitlint.config.js  index.html  package.json  pnpm-lock.yaml  rollup.config.js
css/: dreamsim.css
js/: main.js  simworker.js
src/: java_rng.rs  lib.rs  state.rs
web/: dreamsim.css  index.html
web/img/: blaze.png:Zone.Identifier  pearl.png:Zone.Identifier
