[package]
name = "dreamsim"
version = "0.1.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1"
rand = { version = "0.7", features = ["wasm-bindgen"] }
rand_distr = "0.3"
java_random = "0.1"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["Window"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
